# algorithms-final-project

./: .gitignore  Cargo.toml
benches/: all_sorts_16_bit.rs  all_sorts_32_bit.rs  all_sorts_64_bit.rs  final.rs  lab.rs  presorted.rs  reversed.rs  split_sorts.rs
examples/: binary_insertion.rs  bubblesort.rs  heapsort.rs  insertion.rs  mergesort.rs  quicksort.rs  radix.rs  timsort.rs
src/: binary_insertion_sort.rs  bingo_sort.rs  bubble_sort.rs  cocktail_shaker_sort.rs  counting_sort.rs  heapsort.rs  in_placemerge_sort.rs  insertion_sort.rs  lib.rs  merge_sort.rs  msd_radix_sort.rs  parallel_merge_sort.rs  quicksort.rs  selection_sort.rs  test_utils.rs
