[package]
name = "sorts-rs"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

###################################################################################################
# Profiles
###################################################################################################

[profile.bench]
debug-assertions = false
lto = "fat"

[profile.release]
debug-assertions = false
lto = "fat"
panic = "abort"

###################################################################################################
# Features
###################################################################################################

[features]
default = ["big-o-n-squared", "big-o-n-log-n", "big-o-other"]

big-o-n-squared = ["bubble-sort", "cocktail-shaker-sort", "selection-sort", "linear-insertion-sort", "binary-insertion-sort"]
big-o-n-log-n = ["merge-sort", "parallel-merge-sort", "quicksort", "heapsort"]
big-o-other = ["bingo-sort"]

bubble-sort = []
cocktail-shaker-sort = []
selection-sort = []
linear-insertion-sort = []
binary-insertion-sort = []

bingo-sort = []

merge-sort = []
parallel-merge-sort = ["num_cpus", "crossbeam"]
quicksort = []
heapsort = []

benchmark-internals = ["rand", "jemallocator", "snmalloc-rs"]
###################################################################################################
# Production Dependencies
###################################################################################################

[dependencies.num_cpus]
version = "1.13"
optional = true

[dependencies.crossbeam]
version = "0.7.3"
optional = true

[dependencies.rand]
version = "0.7.3"
optional = true

[dependencies.jemallocator]
version = "0.3.2"
optional = true

[dependencies.snmalloc-rs]
version = "0.2.11"
optional = true

###################################################################################################
# Development Dependencies
###################################################################################################

[dev-dependencies.quickcheck]
version = "0.9.2"

[dev-dependencies.quickcheck_macros]
version = "0.9.1"

[dev-dependencies.criterion]
version = "0.3.1"

[dev-dependencies.rand]
version = "0.7.3"

###################################################################################################
# Benchmarks
###################################################################################################

[[bench]]
name = "all_sorts_64_bit"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "lab"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "all_sorts_16_bit"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "split_sorts"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "presorted"
harness = false
required-features = ["benchmark-internals"]

[[bench]]
name = "reversed"
harness = false
required-features = ["benchmark-internals"]